--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="vision">
           <h2>MISSION</h2>
-          <h3>人生後半の不安と孤独をなくし、最後まで全力で駆け抜けられる社会をつくる</h3>
+          <h3>人生後半の不安と孤独をなくし、最後まで全力で駆け抜けられる社会をつくる！！！！！！！！！！</h3>
           <h2>VISION</h2>
           <h3>人生100年、誰もが、いつまでも、好きなものに夢中で生きる世界</h3>
         </div>
